--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Flask>=2.0
-gunicorn
+flask==3.0.2
+selenium==4.18.1
+requests==2.31.0
+beautifulsoup4==4.12.3
+flask-cors==6.0.0
+gunicorn==21.2.0 
